Avoid DCHECK when installing a theme with non-opaque NTP bg color.

BUG=719064

Review-Url: https://codereview.chromium.org/2872663002
Cr-Commit-Position: refs/heads/master@{#470646}

Former-commit-id: 9cc6a14e716bf8f342329710bfd3d3944365d90c